--- a/newinit.org
+++ b/newinit.org
@@ -130,9 +130,19 @@ Tools that make it easier to ensure that all changes are tracked under revision 
 ** Python
 Tooling that offers interactive evaluation of Python code and facilitates working with virtual environments via Anaconda.
 #+begin_src emacs-lisp  
+
+(require 'python)
+
+(use-package websocket
+  :pin melpa
+  :ensure t
+)
+
 (use-package ein
   :pin melpa
   :ensure t
+  :config
+  (require 'ein)
 )
 #+end_src
 ** Clojure
