--- a/newinit.org
+++ b/newinit.org
@@ -48,7 +48,7 @@ The code below compiles to init.el, the file that emacs expects when first booti
 (require 'package)
 (setq package-enable-at-startup nil)
 (add-to-list 'package-archives '("melpa" . "http://melpa.org/packages/"))
-;(add-to-list 'package-archives '("marmalade" . "http://marmalade-repo.org/packages/"))
+(add-to-list 'package-archives '("org" . "http://orgmode.org/elpa/"))
 (add-to-list 'package-archives '("elpa" . "http://elpa.gnu.org/packages/"))
 (package-initialize)
 
@@ -140,6 +140,8 @@ Tooling that offers interactive evaluation of Python code and facilitates workin
 (use-package cider
   :pin melpa
   :ensure t
+  :init
+  (add-to-list 'exec-path "~/bin")
 )
 
 
@@ -226,7 +228,7 @@ Interactive evaluation of source code in org-babel blocks
 A pretty good way of organizing hierarchical information, and a pretty helpful task manager. The code below sets up org-mode for task management.
 #+begin_src emacs-lisp 
 (use-package org
-  ;; :ensure org-plus-contrib
+  :ensure org-plus-contrib
   :defer t)
 
 (setq org-refile-targets '(("~/org/gtd.org" :maxlevel . 3)
@@ -262,6 +264,7 @@ A pretty good way of organizing hierarchical information, and a pretty helpful t
         "* %? \t :note:\n :PROPERTIES: \n :CREATED: %u \n :ANKI_NOTE_TYPE: Basic \n :END: \n** Front\n\n** Back"
         :empty-lines 1))) 
 #+end_src
+
 Org-mode is also a pretty effective way of composing information to be exported to another format. 
 #+begin_src emacs-lisp 
 (require 'ox)
@@ -435,7 +438,7 @@ These tools make working with text (source code, prose, input boxes) easier. Fly
 )
 
 (use-package undo-tree
-  :pin melpa
+  :pin elpa
   :ensure t
   :config
   (global-undo-tree-mode)
@@ -794,6 +797,9 @@ These features are used to make the rest of the interface look prettier.
   :config
   (require 'spaceline-config)
   (spaceline-emacs-theme)
+  (set-face-attribute 'mode-line nil :box nil)
+  (set-face-attribute 'mode-line-inactive nil :box nil)
+  (setq powerline-default-separator "nil")
 )
 
 (use-package all-the-icons
@@ -840,6 +846,7 @@ These features are used to make the rest of the interface look prettier.
    (flycheck-mode "✔")
    (which-key-mode "⌨")
    (atomic-chrome-edit-mode "⚛")
+   (rainbow-mode "🌈")
    ))
  (dim-major-names
  '((emacs-lisp-mode           "EL")
@@ -887,6 +894,13 @@ These features are used to make the rest of the interface look prettier.
 (add-hook 'nov-mode-hook 'my-nov-font-setup)
 #+end_src 
 
+One tool that will help with further customization (and generative design!) is rainbow-mode, which colorizes color codes in buffers.
+#+BEGIN_SRC emacs-lisp
+(use-package rainbow-mode
+  :pin elpa
+  :ensure t
+)
+#+END_SRC
 
 Finally, we'll disable some things we don't need when working in a keyboard-centric text editor.
 #+begin_src emacs-lisp
