--- a/newinit.org
+++ b/newinit.org
@@ -155,6 +155,11 @@ Tooling that offers interactive evaluation of Python code and facilitates workin
   :ensure t
   :init
   (add-to-list 'exec-path "~/bin")
+  :config
+  ; allow errors to pass silently without popping up the error buffer when
+  ; hacking in the repl
+  (setq cider-show-error-buffer 'except-in-repl) 
+
 )
 
 
@@ -468,6 +473,14 @@ Control spotify from within emacs
   :ensure t
 )
 #+end_src
+
+Sometimes a simpler file format is easier.
+#+BEGIN_SRC emacs-lisp
+(use-package todotxt
+  :pin melpa
+  :ensure t
+)
+#+END_SRC
 
 * Appearance
 ** Pre-made themes
