--- a/newinit.org
+++ b/newinit.org
@@ -78,13 +78,15 @@ The code below compiles to init.el, the file that emacs expects when first booti
 
 * Keybindings
 
-Emacs' default keybindings are linked with repetitive strain injury. Boon emphasizes modal editing (similar to Vim), key sequences, and composability to avoid the strain associated with pressing key chords.
+Emacs' default keybindings are linked with repetitive strain injury. Vim (enabled here through evil-mode) emphasizes modal editing, key sequences, and composability to avoid the strain associated with pressing key chords.
 #+begin_src emacs-lisp  
 (use-package evil
   :ensure t
   :pin melpa
   :config 
   (evil-mode 1)
+  ; one holdover from xah
+  (global-set-key (kbd "M-SPC") 'evil-force-normal-state) 
 )
 
 #+end_src
@@ -139,6 +141,23 @@ Tooling that offers interactive evaluation of Python code and facilitates workin
     (require 'ein-subpackages)
     )
 #+end_src
+** Lisps 
+#+BEGIN_SRC emacs-lisp
+
+(use-package lispy
+ :pin melpa
+:config
+(add-hook 'emacs-lisp-mode-hook (lambda () (lispy-mode 1)))
+(add-hook 'clojure-mode-hook (lambda () (lispy-mode 1)))
+)
+
+(use-package lispyville
+:pin melpa
+:after (lispy)
+:config 
+(add-hook 'lispy-mode-hook #'lispyville-mode))
+
+#+END_SRC
 ** Clojure
 #+begin_src emacs-lisp  
 (use-package cider
@@ -332,41 +351,43 @@ These tools make it easier to figure out what it's possible to do within Emacs, 
 
 Ivy/Counsel/Swiper
 #+begin_src emacs-lisp  
-(use-package ivy
-  :ensure t
-  :pin melpa
-  :config
-  (ivy-mode 1)
-  
-)
+  (use-package ivy
+    :ensure t
+    :pin melpa
+    :config
+    (ivy-mode 1)
 
-(use-package counsel
-  :ensure t
-  :pin melpa
-  :config
-  (counsel-mode 1)
-)
+  )
 
-(use-package swiper
-  :pin melpa
-  :ensure t
-)
+  (use-package counsel
+    :ensure t
+    :pin melpa
+    :config
+    (counsel-mode 1)
+  )
 
-(use-package counsel-dash
-  :ensure t
-  :pin melpa
-  :config
-  (setq counsel-dash-common-docsets 
-    '("Bash" "Clojure" "Emacs_Lisp" "Java_SE8" "Pandas" "Python_3" "Racket"
-      "Scala"))
-  (setq counsel-dash-docsets-path "~/.docsets")
-  (add-hook 'scala-mode-hook (lambda () 
-    (setq-local counsel-dash-docsets '("Scala" "Java_SE8"))))
-  (add-hook 'clojure-mode-hook (lambda () 
-    (setq-local counsel-dash-docsets '("Clojure"))))
-  (setq counsel-dash-browser-func 'eww)
-  
-)
+  (use-package swiper
+    :pin melpa
+    :ensure t
+    :bind ("C-s" . swiper)
+  )
+
+  (use-package counsel-dash
+    :ensure t
+    :pin melpa
+    :config
+    (setq counsel-dash-common-docsets 
+      '("Bash" "Clojure" "Emacs_Lisp" "Java_SE8" "Pandas" "Python_3" "Racket"
+	"Scala"))
+    (setq counsel-dash-docsets-path "~/.docsets")
+    (add-hook 'scala-mode-hook (lambda () 
+      (setq-local counsel-dash-docsets '("Scala" "Java_SE8"))))
+    (add-hook 'clojure-mode-hook (lambda () 
+      (setq-local counsel-dash-docsets '("Clojure"))))
+    (setq counsel-dash-browser-func 'eww)
+
+  )
+
 #+end_src
 
 
@@ -400,39 +421,47 @@ File browsing utilities
 These tools make working with text (source code, prose, input boxes) easier. Flycheck helps spot syntax errors, sdcv helps define words, and atomic-chrome allows for much more efficient entry of text into browser fields (using emacs).
 
 #+begin_src emacs-lisp 
-(use-package flycheck
-  :pin melpa
-  :ensure t
-  :config (global-flycheck-mode))
+    (use-package flycheck
+      :pin melpa
+      :ensure t
+      :config (global-flycheck-mode))
 
-(use-package sdcv
-  :pin melpa
-  :ensure t
-)
+    (use-package sdcv
+      :pin melpa
+      :ensure t
+    )
 
-(use-package nov
-  :pin melpa
-  :ensure t
-  :mode ("\\.epub\\'" . nov-mode)
-)
+    (use-package nov
+      :pin melpa
+      :ensure t
+      :mode ("\\.epub\\'" . nov-mode)
+    )
 
-(use-package atomic-chrome
-  :pin melpa
-  :ensure t
-  :config
-  (setq atomic-chrome-url-major-mode-alist
-    '(("databricks" . scala-mode)
-      ("ipynb" . python-mode)))
-  (atomic-chrome-start-server)
-)
+    (use-package atomic-chrome
+      :pin melpa
+      :ensure t
+      :config
+      (setq atomic-chrome-url-major-mode-alist
+	'(("databricks" . scala-mode)
+	  ("ipynb" . python-mode)))
+      (atomic-chrome-start-server)
+    )
 
-(use-package undo-tree
-  :pin elpa
-  :ensure t
-  :config
-  (global-undo-tree-mode)
-)
+    (use-package undo-tree
+      :pin elpa
+      :ensure t
+      :config
+      (global-undo-tree-mode)
+    )
 
+
+  (use-package evil-goggles
+    :ensure t
+    :pin melpa
+    :config
+    (evil-goggles-mode)
+    (evil-goggles-use-diff-faces)
+    )
 #+end_src
 ** Others
 Control spotify from within emacs
