--- a/README.org
+++ b/README.org
@@ -1,9 +1,7 @@
 * Introduction 
 
-This repo contains a somewhat verbose emacs configuration, managed mostly through ~use-package~, with each package loaded according to its purpose as part of my emacs configuration.
-
-Full descriptions are available in the file ~newinit.org~.
+A repo to manage my .spacemacs file.
 
 * How to use this repo
 
-After pulling the latest version of the repo, copy the files newinit.org and init.el to the .emacs path.
+Install spacemacs if it's not yet installed, then. Copy the file to the base directory.
